docs: record master owner bottleneck diagnosis